cabal-version: >=1.10
name: servant-auth-cookie
version: 0.6.0.3
license: BSD3
license-file: LICENSE
copyright: Al Zohali <zohl@fmap.me>, Mark Karpov <markkarpov@opmbx.org>
maintainer: Al Zohali <zohl@fmap.me>
author: Al Zohali
synopsis: Authentication via encrypted cookies
description:
    Authentication via encrypted client-side cookies,
    inspired by client-session library by Michael Snoyman and based on
    ideas of the paper "A Secure Cookie Protocol" by Alex Liu et al.
category: Web
build-type: Simple
extra-source-files:
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/zohl/servant-auth-cookie.git

flag dev
    description:
        Turn on development settings.
    default: False
    manual: True

flag servant9
    description:
        Use servant-0.9 (or higher)

flag servant91
    description:
        Use servant-0.9.1 (or higher)

flag build-examples
    description:
        Build example executables.
    default: False
    manual: True

library
    exposed-modules:
        Servant.Server.Experimental.Auth.Cookie
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <4.12,
        base64-bytestring <1.1,
        blaze-builder ==0.4.*,
        bytestring <0.11,
        cereal ==0.5.*,
        cereal-time ==0.1.*,
        cookie >=0.4.1 && <0.5,
        cryptonite >=0.14 && <0.26,
        data-default <0.8,
        exceptions >=0.8 && <0.11,
        http-types >=0.9 && <0.13,
        memory >=0.11 && <0.15,
        mtl >=2.0 && <2.3,
        servant >=0.5 && <0.15,
        servant-server >=0.5 && <0.15,
        tagged ==0.8.*,
        text <1.3,
        time >=1.6 && <1.9,
        transformers >=0.4 && <0.6,
        wai >=3.0 && <3.3
    
    if flag(dev)
        ghc-options: -Wall -Werror
    else
        ghc-options: -O2 -Wall
    
    if flag(servant9)
        build-depends:
            servant >=0.9 && <0.15,
            http-api-data ==0.3.*
    else
        
        if flag(servant91)
            build-depends:
                servant >=0.9 && <0.15,
                http-api-data ==0.3.*
        else
            build-depends:
                servant <0.9,
                bytestring-conversion >=0.3.1 && <0.4

executable example
    main-is: Main.hs
    hs-source-dirs: example
    default-language: Haskell2010
    
    if flag(build-examples)
        build-depends:
            base >=4.7 && <5.0,
            base-compat >=0.9.1 && <0.10,
            base64-bytestring <1.1,
            blaze-html >=0.8 && <0.10,
            blaze-markup >=0.7 && <0.9,
            bytestring <0.11,
            cereal ==0.5.*,
            cryptonite >=0.14 && <0.25,
            data-default <0.8,
            directory <1.4,
            exceptions <0.11,
            filepath <1.5,
            http-media <0.8,
            http-types >=0.9 && <0.12,
            mtl >=2.0 && <3.0,
            servant >=0.5 && <0.13,
            servant-auth-cookie -any,
            servant-blaze >=0.5 && <0.8,
            servant-server >=0.5 && <0.13,
            text <1.3,
            time <1.9,
            transformers >=0.4 && <0.6,
            wai >=3.0 && <3.3,
            warp >=3.0 && <3.3
        
        if flag(servant9)
            other-modules:
                AuthAPI
                FileKeySet
            build-depends:
                servant >=0.9 && <0.15,
                http-api-data ==0.3.*
        else
            build-depends:
                servant <0.9,
                bytestring-conversion >=0.3.1 && <0.4
    else
        buildable: False
    
    if flag(dev)
        ghc-options: -Wall -Werror
    else
        ghc-options: -O2 -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: tests
    other-modules:
        Utils
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5.0,
        QuickCheck >=2.4 && <3.0,
        bytestring <0.11,
        cereal ==0.5.*,
        cryptonite >=0.14 && <0.25,
        data-default <0.8,
        deepseq >=1.3 && <1.5,
        exceptions <0.11,
        hspec >=2.0 && <3.0,
        servant-auth-cookie -any,
        servant-server >=0.5 && <0.13,
        tagged ==0.8.*,
        template-haskell <2.14,
        transformers >=0.4 && <0.6,
        time >=1.5 && <1.8.1
    
    if flag(dev)
        ghc-options: -Wall -Werror
    else
        ghc-options: -O2 -Wall

test-suite example-tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: example
    default-language: Haskell2010
    
    if flag(dev)
        ghc-options: -Wall -Werror
    else
        ghc-options: -O2 -Wall
    
    if flag(build-examples)
        build-depends:
            base >=4.7 && <5.0,
            base-compat >=0.9.1 && <0.10,
            base64-bytestring <1.1,
            blaze-markup <0.9,
            blaze-html >=0.8 && <0.10,
            bytestring <0.11,
            cereal ==0.5.*,
            cookie <0.5,
            exceptions <0.11,
            cryptonite >=0.14 && <0.25,
            data-default <0.8,
            deepseq >=1.3 && <1.5,
            directory <1.4,
            filepath <1.5,
            http-media <0.8,
            http-types >=0.9 && <0.12,
            hspec >=2.0 && <3.0,
            hspec-wai <0.10,
            mtl >=2.0 && <3.0,
            QuickCheck >=2.4 && <3.0,
            servant-auth-cookie -any,
            servant-blaze >=0.5 && <0.8,
            servant-server >=0.5 && <0.13,
            text <1.3,
            time >=1.5 && <1.8.1,
            transformers >=0.4 && <0.6,
            wai <3.3,
            wai-extra <3.1
        
        if flag(servant9)
            build-depends:
                servant >=0.9 && <0.15,
                http-api-data ==0.3.*
        else
            
            if flag(servant91)
                build-depends:
                    servant >=0.9.1 && <0.15,
                    http-api-data ==0.3.*
            else
                build-depends:
                    servant <0.9,
                    bytestring-conversion >=0.3.1 && <0.4
        
        if !impl(ghc >=7.8)
            build-depends:
                tagged ==0.8.*
    else
        buildable: False

benchmark bench
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchmarks
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5.0,
        bytestring <0.11,
        criterion >=0.6.2.1 && <1.4,
        cryptonite >=0.14 && <0.25,
        servant-auth-cookie -any,
        servant-server >=0.5 && <0.13
    
    if flag(dev)
        ghc-options: -Wall -Werror
    else
        ghc-options: -O2 -Wall
